# ermete-forge

./: .gitignore  Containerfile  README.md  fix_yaml.py  fix_yaml2.py  fix_yaml3.py  local_forge_build.sh  refactor_orchestrator.py  rewrite_upstreams.py
RPMS_OUT/: kernel-headers-7.1.2-1.x86_64.rpm
builder/: Containerfile  rpmfusion-custom.repo
certs/: MOK.der  MOK.priv  MOK_PUBLIC_DER.txt
config/: apply-quirks.sh  packages.json  rolling_packages.txt  rpmmacros  upstream_core.txt
recovery/: boot.ipxe  ipxe.efi
scripts/: akmods  build_rolling_local.sh  check_idempotency.sh  dynamic-matrix.sh  fetch_repo_rpms.sh  forge_kernel_matrix.py  idempotency_checker.py  internal_quirks_build.sh  kmodtool  patch_orchestrator.py  test_forge_kernel_matrix.py
specs/ermete-settings-rs/ermete-settings-rs-1.0.0/: Cargo.toml  test_proxy.rs
specs/ermete-settings-rs/ermete-settings-rs-1.0.0/src/: main.rs  style.rs
specs/ermete-settings-rs/ermete-settings-rs-1.0.0/src/pages/: accounts.rs  appearance.rs  audio.rs  battery.rs  bluetooth.rs  desktop.rs  displays.rs  focus.rs  general.rs  keyboard.rs  mod.rs  mouse.rs  network.rs  privacy.rs  wired.rs
tier0/: ModemManager-glib-1.24.2-1.fc43.x86_64.rpm  OpenCL-ICD-Loader-3.0.6-4.20241023git5907ac1.fc43.x86_64.rpm  abattis-cantarell-vf-fonts-0.301-15.fc43.noarch.rpm  add-determinism-0.6.0-3.fc43.x86_64.rpm  adwaita-cursor-theme-49.0-1.fc43.noarch.rpm  adwaita-icon-theme-49.0-1.fc43.noarch.rpm  adwaita-icon-theme-legacy-46.2-4.fc43.noarch.rpm  adwaita-mono-fonts-49.0-2.fc43.noarch.rpm  adwaita-sans-fonts-49.0-2.fc43.noarch.rpm  (+1107 more)
(+12245 files in other folders)
